--- a/.github/workflows/helloWorld.yml
+++ b/.github/workflows/helloWorld.yml
@@ -1,12 +1,13 @@
 name: Hello World
-'on':
-  push:
-    branches:
-      - main
-  workflow_dispatch: null
+
+on: [push]
+
 jobs:
-  say-hello:
+  hello_world_job:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Print Hello World
-        run: 'echo "Hello, World!"'
+        run: echo "Hello, World!"
