--- a/.github/workflows/getRepoInfo.yml
+++ b/.github/workflows/getRepoInfo.yml
@@ -14,7 +14,7 @@ jobs:
         id: repo_info
         run: |
           echo "Fetching repository information..."
-          curl -s -H "Authorization: token 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" \
+          curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
           https://api.github.com/repos/vineettiwari22071991/reactNative > repo_info.json
           echo "Repository information fetched."
 
