--- a/.github/workflows/react-native.yml
+++ b/.github/workflows/react-native.yml
@@ -43,10 +43,11 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y wget unzip
-          wget https://dl.google.com/android/repository/commandlinetools-linux-6609375_latest.zip
+          wget https://dl.google.com/android/repository/commandlinetools-linux-6609375_latest.zip -O commandlinetools.zip
           mkdir -p $ANDROID_HOME/cmdline-tools
-          unzip commandlinetools-linux-6609375_latest.zip -d $ANDROID_HOME/cmdline-tools
-          mv $ANDROID_HOME/cmdline-tools/cmdline-tools $ANDROID_HOME/cmdline-tools/latest
+          unzip -q commandlinetools.zip -d $ANDROID_HOME/cmdline-tools
+          mkdir -p $ANDROID_HOME/cmdline-tools/latest
+          mv $ANDROID_HOME/cmdline-tools/cmdline-tools/* $ANDROID_HOME/cmdline-tools/latest
           yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
           $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-29" "build-tools;29.0.3"
         env:
@@ -82,3 +83,22 @@ jobs:
         env:
           DISPLAY: :99
         continue-on-error: true
+
+      - name: Capture Build Logs
+        if: failure()
+        run: |
+          echo "=== React Native Build Logs ==="
+          cat android/app/build/reports/tests/testDebugUnitTest/index.html
+          cat android/app/build/reports/androidTests/connected/index.html
+
+      - name: Output Emulator Logs
+        if: failure()
+        run: |
+          echo "=== Emulator Logs ==="
+          adb logcat -d
+
+      - name: Output ADB Devices
+        if: failure()
+        run: |
+          echo "=== ADB Devices ==="
+          adb devices
